feat: Updates CODEOWNERS configuration, modifies docker-compose, adjusts .env.example file, adds new dependencies in package.json, deploys routes and controllers for clinics, and documents operations in openapi.yaml.

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,4 @@
 MONGOADMIN=
 MONGOPASS=
-MONGOURL=mongodb://ADMIN:PASS@mongodb:27017/YOUR_SERVICE?authSource=admin
+MONGOURL=mongodb://localhost:27017/clinic
 NODE_ENV=development
-KAFKA_HOST=localhost:9092
