--- a/package.json
+++ b/package.json
@@ -48,10 +48,14 @@
   "dependencies": {
     "cookie-parser": "^1.4.7",
     "cors": "2.8.5",
+    "country-list": "2.3.0",
     "express": "4.21.1",
+    "install": "0.13.0",
     "kafka-node": "5.0.0",
     "mongoose": "8.7.3",
+    "npm": "10.9.0",
     "swagger-ui-express": "5.0.1",
+    "uuid": "11.0.3",
     "winston": "3.16.0",
     "yamljs": "0.3.0"
   }
