--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,12 +15,12 @@ services:
     volumes:
       - mongo-data:/data/db
 
-  template:
+  payment:
     restart: unless-stopped
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: template
+    container_name: payment
     environment:
       - MONGODB_URL=${MONGOURL}
     depends_on:
