chore(docker): solved npm bug

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,8 @@
-version: "3.8"
-
 services:
   mongodb:
     restart: unless-stopped
     image: mongo:latest
-    container_name: mongodb
+    container_name: mongodb-payment
     environment:
       - MONGO_INITDB_ROOT_USERNAME=${MONGOADMIN}
       - MONGO_INITDB_ROOT_PASSWORD=${MONGOPASS}
@@ -29,8 +27,6 @@ services:
       - backend
     ports:
       - "3001:3001"
-    volumes:
-      - .:/payment-svc
 
 volumes:
   mongo-data:
