--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -4,19 +4,22 @@ on:
   push:
     branches:
       - main
+      - develop
     tags:
       - "*.*.*"
   pull_request:
     branches:
       - main
+      - develop
     types:
       - labeled
 
 env:
-  REGISTRY_IMAGE: ${{ secrets.DOCKER_USERNAME }}/AQUÍ_VA_EL_NOMBRE_DE_TU_IMAGEN_SIN_MAYUSCULAS
-  GHCR_IMAGE: fis2425/AQUÍ_VA_EL_NOMBRE_DE_TU_IMAGEN_SIN_MAYUSCULAS
+  REGISTRY_IMAGE: ${{ secrets.DOCKER_USERNAME }}/payment
+  GHCR_IMAGE: fis2425/payment
   PR_ID: ${{ github.event.pull_request.number }}
   TAG: ${{ github.ref_name }}
+  COMMIT_SHA: ${{ github.sha }}
 
 jobs:
   build:
@@ -67,6 +70,7 @@ jobs:
             ${{ startsWith(github.ref, 'refs/tags/') && format('{0}:{1}', env.REGISTRY_IMAGE, env.TAG) || '' }}
             ${{ github.ref == 'refs/heads/main' && format('{0}:latest', env.REGISTRY_IMAGE) || '' }}
             ${{ github.event_name == 'pull_request' && format('{0}:PR.{1}', env.REGISTRY_IMAGE, env.PR_ID) || '' }}
+            ${{ github.ref == 'refs/heads/develop' && github.event_name == 'push' && format('{0}:unstable-{1}', env.REGISTRY_IMAGE, env.COMMIT_SHA ) || '' }}
 
       - name: Build and Push Ghcr Image
         uses: docker/build-push-action@v6.9.0
@@ -81,3 +85,4 @@ jobs:
             ${{ startsWith(github.ref, 'refs/tags/') && format('ghcr.io/{0}:{1}', env.GHCR_IMAGE, env.TAG) || '' }}
             ${{ github.ref == 'refs/heads/main' && format('ghcr.io/{0}:latest', env.GHCR_IMAGE) || '' }}
             ${{ github.event_name == 'pull_request' && format('ghcr.io/{0}:PR.{1}', env.GHCR_IMAGE, env.PR_ID) || '' }}
+            ${{ github.ref == 'refs/heads/develop' && github.event_name == 'push' && format('ghcr.io/{0}:unstable-{1}', env.GHCR_IMAGE, env.COMMIT_SHA ) || '' }}
