chore: update environment variables and docker-compose configuration; fix clinic populator data
chore: update environment variables and docker-compose configuration; fix clinic populator data

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,12 +21,16 @@ services:
     container_name: payment
     environment:
       - MONGODB_URL=${MONGOURL}
+      - STRIPE_API_KEY=${STRIPE_API_KEY}
+      - STRIPE_SECRET_KEY=${STRIPE_SECRET_KEY}
     depends_on:
       - mongodb
     networks:
       - backend
     ports:
       - "3003:3003"
+    volumes:
+    - .:/payment-svc
 
 volumes:
   mongo-data:
