--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "dotenv": "16.4.5",
     "express": "4.21.1",
     "install": "0.13.0",
+    "jsonwebtoken": "9.0.2",
     "kafka-node": "5.0.0",
     "mongoose": "8.8.3",
     "npm": "10.9.0",
