--- a/package.json
+++ b/package.json
@@ -36,7 +36,6 @@
   "devDependencies": {
     "@commitlint/cli": "19.6.1",
     "@commitlint/config-conventional": "19.6.0",
-
     "@eslint/js": "9.17.0",
     "@stylistic/eslint-plugin-js": "2.12.1",
     "eslint": "9.17.0",
@@ -51,6 +50,7 @@
     "cors": "2.8.5",
     "country-list": "2.3.0",
     "cross-spawn": "7.0.6",
+    "dotenv": "16.4.7",
     "express": "4.21.2",
     "install": "0.13.0",
     "jsonwebtoken": "9.0.2",
