--- a/kubernetes/mongodb-service.yaml
+++ b/kubernetes/mongodb-service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   annotations:
-    kompose.cmd: C:\Users\maria\AppData\Local\Microsoft\WinGet\Packages\Kubernetes.kompose_Microsoft.Winget.Source_8wekyb3d8bbwe\kompose.exe convert -o kubernetes/
+    kompose.cmd: kompose convert -o kubernetes/
     kompose.version: 1.35.0 (9532ceef3)
   labels:
     io.kompose.service: mongodb
