--- a/kubernetes/payment-service.yaml
+++ b/kubernetes/payment-service.yaml
@@ -2,13 +2,13 @@ apiVersion: v1
 kind: Service
 metadata:
   annotations:
-    kompose.cmd: C:\Users\maria\AppData\Local\Microsoft\WinGet\Packages\Kubernetes.kompose_Microsoft.Winget.Source_8wekyb3d8bbwe\kompose.exe convert -o kubernetes/
+    kompose.cmd: kompose convert -o kubernetes/
     kompose.version: 1.35.0 (9532ceef3)
   labels:
     io.kompose.service: payment-svc
   name: payment-svc
 spec:
-  type: NodePort
+  type: LoadBalancer
   ports:
     - protocol: TCP
       name: "3003"
