--- a/kubernetes/mongo-payment-persistentvolumeclaim.yaml
+++ b/kubernetes/mongo-payment-persistentvolumeclaim.yaml
@@ -2,8 +2,8 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   labels:
-    io.kompose.service: mongo-data
-  name: mongo-data
+    io.kompose.service: mongo-payment
+  name: mongo-payment
 spec:
   accessModes:
     - ReadWriteOnce
