--- a/kubernetes/mongodb-deployment.yaml
+++ b/kubernetes/mongodb-deployment.yaml
@@ -5,13 +5,13 @@ metadata:
     kompose.cmd: kompose convert -o kubernetes/
     kompose.version: 1.34.0 (cbf2835db)
   labels:
-    io.kompose.service: mongodb
-  name: mongodb
+    io.kompose.service: mongodb-payment
+  name: mongodb-payment
 spec:
   replicas: 1
   selector:
     matchLabels:
-      io.kompose.service: mongodb
+      io.kompose.service: mongodb-payment
   strategy:
     type: Recreate
   template:
@@ -20,7 +20,7 @@ spec:
         kompose.cmd: kompose convert -o kubernetes/
         kompose.version: 1.34.0 (cbf2835db)
       labels:
-        io.kompose.service: mongodb
+        io.kompose.service: mongodb-payment
     spec:
       containers:
         - env:
@@ -36,6 +36,16 @@ spec:
                   key: MONGOADMIN
           image: mongo:latest
           name: mongodb-payment
+          livenessProbe:
+            exec:
+              command:
+              - mongosh
+              - --eval
+              - 'db.runCommand("ping").ok' 
+              - localhost:27017/test
+              - --quiet
+            initialDelaySeconds: 15
+            periodSeconds: 5
           ports:
             - containerPort: 27017
               protocol: TCP
