--- a/kubernetes/mongodb-service.yaml
+++ b/kubernetes/mongodb-service.yaml
@@ -3,10 +3,10 @@ kind: Service
 metadata:
   annotations:
     kompose.cmd: kompose convert -o kubernetes/
-    kompose.version: 1.35.0 (9532ceef3)
+    kompose.version: 1.34.0 (cbf2835db)
   labels:
-    io.kompose.service: mongodb
-  name: mongodb
+    io.kompose.service: mongodb-payment
+  name: mongodb-payment
 spec:
   type: ClusterIP
   ports:
@@ -15,4 +15,4 @@ spec:
       port: 27017
       targetPort: 27017
   selector:
-    io.kompose.service: mongodb
+    io.kompose.service: mongodb-payment
