--- a/kubernetes/payment-deployment.yaml
+++ b/kubernetes/payment-deployment.yaml
@@ -16,13 +16,14 @@ spec:
     metadata:
       annotations:
         kompose.cmd: kompose convert -o kubernetes/
-        kompose.version: 1.34.0 (HEAD)
+        kompose.version: 1.34.0 (cbf2835db)
       labels:
         io.kompose.service: payment-svc
     spec:
       containers:
         - name: payment-svc
-          image: ghcr.io/fis2425/payment:v1.1.0
+          image: ghcr.io/fis2425/payment:latest
+          imagePullPolicy: Always
           ports:
             - containerPort: 3003
               protocol: TCP
@@ -66,7 +67,4 @@ spec:
                 secretKeyRef:
                   name: payment-secrets
                   key: STRIPE_API_KEY
-          envFrom:
-            - secretRef:
-                name: ghcr-secret
       restartPolicy: Always
